resources/final/service-ibm-licensing-service-instance.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ibm-license-service-cert-internal
  labels:
    app.kubernetes.io/component: ibm-licensing-service-svc
    app.kubernetes.io/instance: ibm-licensing-service
    app.kubernetes.io/managed-by: operator
    app.kubernetes.io/name: ibm-licensing-service-instance
    release: ibm-licensing-service
  name: ibm-licensing-service-instance
  namespace: ibm-licensing
spec:
  ports:
  - name: api-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ibm-licensing-service-instance
    component: ibm-licensing-service-svc
    licensing_cr: instance
  type: ClusterIP
