resources/final/route-ibm-licensing-service-instance.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: ibm-licensing-service-svc
    app.kubernetes.io/instance: ibm-licensing-service
    app.kubernetes.io/managed-by: operator
    app.kubernetes.io/name: ibm-licensing-service-instance
    release: ibm-licensing-service
  name: ibm-licensing-service-instance
  namespace: ibm-licensing
spec:
  port:
    targetPort: api-port
  tls:
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDqjCCApKgAwIBAgIDB0rbMA0GCSqGSIb3DQEBCwUAMGMxDDAKBgNVBAoTA0lC
[...]
      L/jt+IoGGz5BxgN3Yqeo9K82wOqkjwSwzns7qAX2
      -----END CERTIFICATE-----
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDUTCCAjmgAwIBAgIIH9pVAxNfoNEwDQYJKoZIhvcNAQELBQAwNjE0MDIGA1UE
[...]
      x5GSxLxJ7JYxhBYCpOyCC7QsEmiOjFg6t9xrcI3CIuVwRxc9Yg==
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAxoK8C6lYLQkIF/PIN6RBwJrlOg3I7vVCT7+81IqRGDUa6L2i
[...]
      4U5xDiZtwehZpSrCTmgQzq+1KM5YRMTGOuqPxgWvGQ9buMxU4oG+
      -----END RSA PRIVATE KEY-----
    termination: reencrypt
  to:
    kind: Service
    name: ibm-licensing-service-instance
